--- a/main/templates/server/KCJieShao.html
+++ b/main/templates/server/KCJieShao.html
@@ -17,7 +17,7 @@
     <!-- 顶部导航 -->
     <div class="site-header">
         <div class="container-left">
-            <a class="a head" href="#">千禧微课</a>
+            <a class="a head" href="/">千禧微课</a>
             <a class="a" href="">免费课程</a>
             <a class="a" href="">付费课程</a>
         </div>
@@ -70,7 +70,7 @@
         <!-- 第一大块 -->
         <div class="kc-tp-hd">
             <div class="kc-tp">
-                <img src="{{course.cover}}">
+                <img src="{{course.cover}}" style="width:440px;height:248px">
             </div>
             <div class="kc-hd">
 
@@ -87,51 +87,66 @@
 
 
                 <div class="ljcj">
-                    <span><a href="/video">立即观看</a></span>
+                    <span><a href="/video?course_id={{course.id}}&video_id=1">立即观看</a></span>
                 </div>
             </div>
 
         </div >
         <!-- 第二大块 -->
-        <div>
+        <div style="box-shadow:0px 0px 0.1px #1b1818;">
             <ul class="kc-wxlb" type='none'>
-                    <li class="kclb">
-                       <span><a id="js-a" target="">介绍</a> </span>
-                       <span><a id="catalog-a" target="">目录</a></span>
-                       <span><a id="note-a" target="">笔记</a></span>
-                       <span><a id="forum-a" target="">讨论区</a></span>
+                    <li class="kclb" style="padding-top:6px;">
+                       <span class='jmbt'><a id="js-a" target="">介绍</a> </span>
+                       <span class='jmbt'><a id="catalog-a" target="">目录</a></span>
+                       <span class='jmbt'><a id="note-a" target="">笔记</a></span>
+                       <span class='jmbt'><a id="forum-a" target="">讨论区</a></span>
                     </li>
             </ul>
         </div>
 
         <!-- 课程的目录，目录，笔记，讨论区等详细内容的块 -->
-        <div style="width:100%;height:600px;background:yellow;">
-            <div id="js-panal"  style="width:60%;height:100%;background:red;float:left;">
-              <p style="margin: 10px; text-indent: 2em;">{{course.description}}</p>
+        <div style="width:1208px;height:600px;background:'';">
+            <div style="width:920px;height:50px;float:left;box-shadow:0px 0px 0.1px #1b1818;">
+              <div style="width:auto;height:auto;float:right;background:orange;margin-top:13px;margin-right:20px;">
+              连载
+              </div>
             </div>
-            <div id="catalog-panal" style="width:60%;display: none;height:600px;background:#333;float:left;">
+            <div style="width:260px;height:50px;float:right;box-shadow:0px 0px 0.1px #1b1818;margin-right:8px;">
+
+            </div>
+            <div id="js-panal" style="width:920px;display: block;height:600px;float:left;box-shadow:0px 0px 0.1px #1b1818;">
+              <p style="margin: 30px 80px; text-indent: 2em; font-size: 20px; ">{{course.description}}</p>
+            </div>
+            <div id="catalog-panal">
               <ul type='none' >
                 {% for v in videos %}
-                <li  style="height:55px;">
-                  <div id="">
-                      <span style="width:15%;float:left"><a href="">{{v.title}}</a></span>
-                      <span style="width:50%;float:left;">{{v.description}}</sqan>
-                      <sqan style="width:10%;float:left;">{{v.duration}}</sqan>
+                  <li class="catalog-li">
+                      <div id="">
+                          <span style="width:15%;float:left;text-align:center;">
+                            <a href="" style="text-decoration:none">{{v.title}}</a>
+                          </span>
 
-                  </div>
-                </li>
+                          <p style="width:50%; float:left;">
+                              {{v.description}}
+                          </p>
+
+                          <sqan style="width:35%;float:right;">
+                              <a href="/video?course_id={{course.id}}&video_id={{v.id}}" style="text-decoration:none;">时长：{{v.duration}}分钟</a>
+                          </sqan>
+
+                      </div>
+                  </li>
                 {% endfor %}
               </ul>
             </div>
-
-            <div id="note-panal" style="width:60%;display: none;height:600px;background:#888;float:left;">
+            <div id="note-panal" >
               <div></div>
             </div>
 
-            <div id="forum-panal" style="width:60%;display: none;height:600px;background:#f1f1f1;float:left;">
+            <div id="forum-panal">
               <div></div>
             </div>
-            <div style="width:40%;height:100%;background:pink;float:left;"></div>
+            <div style="width:260px;height:100%;background:pink;float:left;margin-left:20px"></div>
         </div>
 
 
