--- a/main/templates/server/comment.html
+++ b/main/templates/server/comment.html
@@ -1,18 +1,10 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/comment.css')}}">
 
-
-</head>
-<body style="height: 100%; overflow: hidden;"> -->
 {% extends 'server/pageframe.html' %}
 {% block title %}login pages{% endblock %}
 {% block head %}
     {{ super() }}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/comment.css')}}">
+  	<link href="{{ url_for('static', filename='css/video-js.min.css')}}" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/login.css') }}">
 {% endblock %}
 {% block content %}
@@ -23,9 +15,41 @@
   </div>
 
   <div id="vr-mask"></div>
+  <div id="v-left" style="">
+      <!-- <h1 style="font-size: 180px; color: #fff; text-align: center;">视频区</h1> -->
+    <div class="m" width="90%" height="90%">
+        <style>
+            .m>.video-js{
+                background-color: transparent;
+                position: static;
+            }
+        </style>
 
-  <div id="v-left">"></div>
+        <video id="my-video" class="video-js" controls preload="" data-setup="{}" src="{{videos[0].url}}" style="width: 80%; margin-left: 10%;">
+            <source id="v-url" src="{{videos[0].url}}" type="video/mp4">
 
+            <!-- <p class="vjs-no-js"> To view this video please enable JavaScript, and consider upgrading to a web browser that
+                <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a> </p> -->
+        </video>
+        <script src="{{ url_for('static', filename='js/video.min.js')}}"></script>
+        <script src="http://vjs.zencdn.net/5.19/lang/zh-CN.js"></script>
+        <script type="text/javascript">
+
+            var myPlayer = videojs('my-video');
+            videojs("my-video").ready(function () {
+                var myPlayer = this;
+                myPlayer.play();
+            });
+
+        </script>
+        <style>
+            .vjs-big-play-button{
+                top: 50% !important;
+                left: 50%!important;
+            }
+        </style>
+    <!-- </div> -->
+  </div>
 
   <div id="v-box">
       <div id="v-right">
