--- a/main/templates/cms/course_add.html
+++ b/main/templates/cms/course_add.html
@@ -14,7 +14,7 @@
                 <div class="box-header with-border">
                     <h3 class="box-title">添加课程</h3>
                 <!-- </div><script src="{{url_for('static',filename='js/course_add.js')}}"></script> -->
-                <form id="add_course_form">
+                <form id="add_course_form" enctype="multipart/form-data"    ><!-- enctype="multipart/form-data" -->
                     <div class="box-body">
                         <div class="form-group">
                             <label for="input_title">课程名称</label>
