--- a/main/templates/cms/login.html
+++ b/main/templates/cms/login.html
@@ -41,7 +41,7 @@
 
                 <input name="pwd" type="password" class="form-control" id="input_pwd"placeholder="请输入密码！">{{error}}
                 <span id='pass' class="glyphicon glyphicon-lock form-control-feedback"></span>
-                <div class="col-md-12" id="input_pwd"></div>
+                <div class="col-md-12" id=""></div>
             </div>
             <div class="row">
                 <div class="col-xs-8">
