--- a/main/templates/server/myOrder.html
+++ b/main/templates/server/myOrder.html
@@ -9,13 +9,8 @@
     <div class="g-doc f-cb m-center">
         <div class="MyOpenNav_navBody">
             <dl class="mine">
-                {% if user %}
-                <dd><img src='{{ user.img }}' alt="" srcset="" class="avator"></dd> <dt>
-                    <h4>{{ user.name }}</h4>
-                    {% else %}
-                <dd><img src="static/image/123.jpg" alt="" srcset="" class="avator"></dd> <dt>
-                    <h4>Leviathan1914</h4>
-                    {% endif %}
+                <dd><img src="{{ url_for('static', filename='image/233.png') }}" alt="" srcset="" class="avator"></dd> <dt>
+                    <h4>{{ username }}</h4>
                     <p class="type">
                     </p>
                 </dt>
@@ -24,7 +19,7 @@
             <ul class="u-sd f-cb f-tal f-fs1">
                 <li class="pay crt-s"><a href="{{ url_for('server.myOrder')}}">已购课程</a></li>
                 <li class="course"><a href="{{ url_for('server.myCourse') }}">我的收藏</a></li>
-                <li class="plr "><a href="{{ url_for('server.myRecord') }}">播放记录</a></li>
+                <li class="plr "><a href="{{ url_for('server.myRecord') }}">已选选课</a></li>
                 <!-- <li class="note "><a href="/center/myNotes.htm">我的笔记</a></li> -->
             </ul>
         </div>
@@ -34,21 +29,23 @@
                     <li><b class="crt-st">已购课程</b></li>
                 </ul>
                 <div class="m-centercnt f-db m-b-20">
-                    {% if not record %}
+                    {% if not course %}
                     <div class="nowrap">
                         <div class="nostorerecord">当前登录的帐号还没有购买课程</div>
                     </div>
                     {% else %}
                     <div class="wrap">
-                        {% for x in record%}
-                        <a href="{{ record[0] }}">
-                            <div class='video'>
-                                <img src="132.jpg" alt="">
-                                <div class="video-info">
-                                    <h3 class="title"></h3>
-                                    <p class="play-count">{{record[2]}}</p>
+                        {% for i in course %}
+                            {% if i.price > 0 %}
+                            <a href="/KCJieShao/{{i.id}}">
+                                <div class='video'>
+                                    <img src="{{ i.cover }}" alt="">
+                                    <div class="video-info">
+                                        <h3 class="title"></h3>
+                                        <p class="play-count">{{i.name}}</p>
+                                    </div>
                                 </div>
-                            </div>
+                              {% endif %}
                             {% endfor %}
                     </div>
                     {% endif %}
