--- a/main/static/css/comment.css
+++ b/main/static/css/comment.css
@@ -17,6 +17,7 @@
 	margin-right: auto;
 	margin-top: 100px;
 }
+.m>.video-js{background-color: transparent;position: static;}
 .v-box-anim{
     width: 550px !important;
     transition: width 1s;
